# groundrules

./: .gitignore  CLAUDE.md  README.md  STUDY.md  package.json
.ai/: .agentstd.json  coding-standards.md  security-policy.md  testing-policy.md
.cursor/rules/: agentstd.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: groundrules-check.yml
packs/core/: pack.json
packs/dotnet/: pack.json
packs/go/: pack.json
packs/laravel-php/: pack.json
packs/node-ts/: pack.json
packs/python/: pack.json
packs/rails/: pack.json
packs/rust/: pack.json
packs/vue/: pack.json
rust/: Cargo.toml  README.md
rust/src/: main.rs
src/: index.js  lib.js
src/cli/: Cli.js  Printer.js
src/config/: adapters.js  sections.js
src/detectors/: DotnetDetector.js  GoDetector.js  LaravelDetector.js  NodeTsDetector.js  PythonDetector.js  RailsDetector.js  RustDetector.js  StackDetector.js  VueDetector.js  archetype.js  index.js
src/models/: Adapter.js  CanonicalSource.js  DetectionResult.js  Pack.js  Section.js  Skill.js
src/services/: AdapterGenerator.js  BodyBuilder.js  CanonicalWriter.js  CompositionService.js  DriftChecker.js  ImportService.js  PackRepository.js  StackDetectionService.js
src/strategies/: AdapterStrategy.js  CursorMdcStrategy.js  ImportAdapterStrategy.js  InlineAdapterStrategy.js  index.js
src/support/: aiPolicy.js  ansi.js  archetypeFilter.js  frontmatter.js  fs.js  managedBlock.js  sectionSplit.js
test/: parity.sh  smoke.js
test/proto/: README.md  rot-study.js  rot-study.sh  rules-lint.js
(+42 files in other folders)
