[package]
name = "groundrules"
version = "0.1.1"
edition = "2021"
description = "One source of truth for AI coding agents — node-free single binary. Detect your stack, scaffold .ai/, and generate every agent's rules file."
license = "MIT"
repository = "https://github.com/yousefkadah/groundrules"
readme = "README.md"

[[bin]]
name = "groundrules"
path = "src/main.rs"

[dependencies]
include_dir = "0.7"
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
